# MultiAgentSystem

./: README.md  pyproject.toml
assistant/: __init__.py  agents.py  llm.py  main.py  orchestrator.py  profile.py
tests/: test_assistant.py
