[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personalized-multi-agent-assistant"
version = "0.1.0"
description = "Personalized AI-first multi-agent coding assistant"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
